--- a/odoo/addons/base/views/res_users_views.xml
+++ b/odoo/addons/base/views/res_users_views.xml
@@ -34,6 +34,17 @@
             view_mode="form" target="new"/>
 
         <!-- res.groups -->
+        <record id="view_groups_tree" model="ir.ui.view">
+            <field name="name">res.groups.tree</field>
+            <field name="model">res.groups</field>
+            <field name="arch" type="xml">
+                <tree string="Groups">
+                    <field name="name"/>
+                    <field name="full_name"/>
+                    <field name="category_id"/>
+                </tree>
+            </field>
+        </record>
         <record id="view_groups_search" model="ir.ui.view">
             <field name="name">res.groups.search</field>
             <field name="model">res.groups</field>
@@ -43,6 +54,9 @@
                     <separator orientation="vertical"/>
                     <field name="share"/>
                     <filter name="no_share" string="Internal Groups" domain="[('share','=',False)]"/>
+                    <group string="Group By">
+                        <filter string="Category" name="group_by_category" context="{'group_by': 'category_id'}"/>
+                    </group>
                 </search>
             </field>
         </record>
