[TMP] web_editor: reset preset + minors UI

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -631,6 +631,10 @@ body.editor_enable.editor_has_snippets {
             width: 92%;
             padding: 8px;
             margin: 4px 4%;
+
+            > * {
+                line-height: 1.6;
+            }
         }
 
         .o_colorpicker_section {
