--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -326,35 +326,40 @@ $o-color-combinations-presets: (
         (
             'bg': 'delta',
             'text': null,
-            'headings': 'headings-1',
+            'default-headings': 'beta',
+            'custom-headings': 'custom-headings-1',
             'btn-primary': 'alpha',
             'btn-secondary': 'beta',
         ),
         (
             'bg': 'gamma',
             'text': null,
-            'headings': 'headings-2',
+            'default-headings': 'null',
+            'custom-headings': 'custom-headings-2',
             'btn-primary': 'alpha',
             'btn-secondary': 'beta',
         ),
         (
             'bg': 'beta',
             'text': 'delta',
-            'headings': 'headings-3',
+            'default-headings': 'delta',
+            'custom-headings': 'custom-headings-3',
             'btn-primary': 'alpha',
             'btn-secondary': 'gamma',
         ),
         (
             'bg': 'alpha',
             'text': 'delta',
-            'headings': 'headings-4',
+            'default-headings': 'epsilon',
+            'custom-headings': 'custom-headings-4',
             'btn-primary': 'epsilon',
             'btn-secondary': 'gamma',
         ),
         (
             'bg': 'epsilon',
             'text': 'delta',
-            'headings': 'headings-5',
+            'default-headings': 'delta',
+            'custom-headings': 'custom-headings-5',
             'btn-primary': 'alpha',
             'btn-secondary': 'gamma',
         ),
