--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -1726,7 +1726,7 @@
                         </div>
                     </t>
                 </div>
-                <t t-if="len(product_images) > 1">
+                <t t-if="len(product_images) > 0">
                     <a class="carousel-control-prev" href="#o-carousel-product" role="button" data-slide="prev">
                         <span class="fa fa-chevron-left p-2" role="img" aria-label="Previous" title="Previous"/>
                     </a>
@@ -1735,8 +1735,8 @@
                     </a>
                 </t>
             </div>
-            <div t-ignore="True" class="d-none d-md-block text-center" id="o-carousel-product-media">
-                <ol t-if="len(product_images) > 1" class="carousel-indicators d-inline-block position-static mx-auto my-0 p-1 text-left">
+            <div t-ignore="True" class="d-none d-md-block text-center" id="o-carousel-product-media" t-att-product-temp-id="product_template_id">
+                <ol t-if="len(product_images) > 0" class="carousel-indicators d-inline-block position-static mx-auto my-0 p-1 text-left">
                     <t t-foreach="product_images" t-as="product_image"><li t-attf-class="d-inline-block m-1 align-top {{'active' if product_image_first else ''}}" data-target="#o-carousel-product" t-att-data-slide-to="str(product_image_index)">
                         <div t-field="product_image.image_128" t-options='{"widget": "image", "qweb_img_responsive": False, "class": "o_image_64_contain", "alt-field": "name"}'/>
                         <i t-if="product_image._name == 'product.image' and product_image.embed_code" class="fa fa-2x fa-play-circle-o o_product_video_thumb"/>
