--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -325,31 +325,31 @@ $o-color-combinations-presets: (
     (
         (
             'bg': 'delta',
-            'text': null,
-            'default-headings': 'beta',
+            'text': 'custom-text-1',
+            'default-headings': 'alpha',
             'custom-headings': 'custom-headings-1',
             'btn-primary': 'alpha',
             'btn-secondary': 'beta',
         ),
         (
             'bg': 'gamma',
-            'text': null,
-            'default-headings': 'null',
+            'text': 'custom-text-2',
+            'default-headings': null,
             'custom-headings': 'custom-headings-2',
             'btn-primary': 'alpha',
             'btn-secondary': 'beta',
         ),
         (
             'bg': 'beta',
-            'text': 'delta',
-            'default-headings': 'delta',
+            'text': 'custom-text-3',
+            'default-headings': 'alpha',
             'custom-headings': 'custom-headings-3',
             'btn-primary': 'alpha',
             'btn-secondary': 'gamma',
         ),
         (
             'bg': 'alpha',
-            'text': 'delta',
+            'text': 'custom-text-4',
             'default-headings': 'epsilon',
             'custom-headings': 'custom-headings-4',
             'btn-primary': 'epsilon',
@@ -357,7 +357,7 @@ $o-color-combinations-presets: (
         ),
         (
             'bg': 'epsilon',
-            'text': 'delta',
+            'text': 'custom-text-5',
             'default-headings': 'delta',
             'custom-headings': 'custom-headings-5',
             'btn-primary': 'alpha',
