--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -326,42 +326,52 @@ $o-color-combinations-presets: (
         (
             'bg': 'delta',
             'text': 'custom-text-1',
-            'default-headings': 'alpha',
+            'headings': 'alpha',
             'custom-headings': 'custom-headings-1',
             'btn-primary': 'alpha',
             'btn-secondary': 'beta',
+            'custom-btn-primary': 'custom-btn-primary-1',
+            'custom-btn-secondary': 'custom-btn-secondary-1',
         ),
         (
             'bg': 'gamma',
             'text': 'custom-text-2',
-            'default-headings': null,
+            'headings': null,
             'custom-headings': 'custom-headings-2',
             'btn-primary': 'alpha',
             'btn-secondary': 'beta',
+            'custom-btn-primary': 'custom-btn-primary-2',
+            'custom-btn-secondary': 'custom-btn-secondary-2',
         ),
         (
             'bg': 'beta',
             'text': 'custom-text-3',
-            'default-headings': 'alpha',
+            'headings': 'alpha',
             'custom-headings': 'custom-headings-3',
             'btn-primary': 'alpha',
             'btn-secondary': 'gamma',
+            'custom-btn-primary': 'custom-btn-primary-3',
+            'custom-btn-secondary': 'custom-btn-secondary-3',
         ),
         (
             'bg': 'alpha',
             'text': 'custom-text-4',
-            'default-headings': 'epsilon',
+            'headings': 'epsilon',
             'custom-headings': 'custom-headings-4',
             'btn-primary': 'epsilon',
             'btn-secondary': 'gamma',
+            'custom-btn-primary': 'custom-btn-primary-4',
+            'custom-btn-secondary': 'custom-btn-secondary-4',
         ),
         (
             'bg': 'epsilon',
             'text': 'custom-text-5',
-            'default-headings': 'delta',
+            'headings': 'delta',
             'custom-headings': 'custom-headings-5',
             'btn-primary': 'alpha',
             'btn-secondary': 'gamma',
+            'custom-btn-primary': 'custom-btn-primary-5',
+            'custom-btn-secondary': 'custom-btn-secondary-5',
         ),
     ),
 ) !default;
