--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -592,7 +592,7 @@ blockquote {
 
     $-headings: map-get($config, 'headings');
 
-    @if type-of(o-get-color($-custom-headings)) == color {
+    @if type-of(o-get-color(map-get($config, 'custom-headings'))) == color {
         $-headings: map-get($config, 'custom-headings');
     }
 
