[IMP] web_editor: allow color combinations specific override and access
Now, the color used in a color combination are accessible and possible
to override through the BS $colors map, with a specific prefix
(o-cc for "color combination").

So, to access the 'headings' color of the color combination 3, use:

color('o-cc3-headings');

If you don't need to completely override a color combinations preset,
you can override what you want through a color palette:

$o-color-palettes: (
    (
        'text': red,
        'o-cc4-btn-primary': 'alpha',
        // ...
    )
);

Note: overriding a color combination that way is however not
recommended as it may impact the usability of the future possibility
for the user to edit those.

As our current system allows the user to customize colors of the color
palette (like for menu, default text, etc), this will allow to easily
give them the possibility to override combinations colors in a future
update.

Part of https://github.com/odoo/odoo/pull/45856
task-2197038

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -540,13 +540,12 @@ blockquote {
     @return false;
 }
 @for $index from 1 through length($o-color-combinations) {
-    $config: nth($o-color-combinations, $index);
-    $-bg: map-get($config, 'bg');
-    $-text: map-get($config, 'text');
-    $-headings: map-get($config, 'headings');
-    $-link: map-get($config, 'link');
-    $-btn-primary: map-get($config, 'btn-primary');
-    $-btn-secondary: map-get($config, 'btn-secondary');
+    $-bg: color('o-cc#{$index}-bg');
+    $-text: color('o-cc#{$index}-text');
+    $-headings: color('o-cc#{$index}-headings');
+    $-link: color('o-cc#{$index}-link');
+    $-btn-primary: color('o-cc#{$index}-btn-primary');
+    $-btn-secondary: color('o-cc#{$index}-btn-secondary');
 
     // Those color classes color multiple elements when applied on a snippet.
     // Those rules are not important so that they can be overridden through
