--- a/addons/stock/views/stock_orderpoint_views.xml
+++ b/addons/stock/views/stock_orderpoint_views.xml
@@ -41,6 +41,7 @@
             <tree string="Reordering Rules" editable="bottom" js_class="stock_orderpoint_list">
                 <field name="active" invisible="1"/>
                 <field name="allowed_route_ids" invisible="1"/>
+                <field name="allowed_trigger_ids" invisible="1"/>
                 <field name="trigger_technical_name" invisible="1"/>
                 <field name="virtual" invisible="1"/>
                 <field name="warehouse_id" invisible="1"/>
@@ -66,6 +67,7 @@
             <search string="Reordering Rules Search">
                 <field name="name" string="Reordering Rule"/>
                 <field name="product_id"/>
+                <field name="trigger_technical_name"/>
                 <field name="warehouse_id" groups="stock.group_stock_multi_warehouses"/>
                 <field name="location_id" groups="stock.group_stock_multi_locations"/>
                 <filter string="Archived" name="inactive" domain="[('active', '=', False)]"/>
@@ -138,6 +140,6 @@
     <menuitem
         id="menu_reordering_rules_config"
         action="action_orderpoint"
-        name="Reordering Rules" parent="menu_stock_inventory_control" sequence="10"/>
+        name="Replenish" parent="menu_stock_warehouse_mgmt" sequence="10"/>
     
 </odoo>
