--- a/addons/web/static/src/scss/search_panel.scss
+++ b/addons/web/static/src/scss/search_panel.scss
@@ -13,13 +13,15 @@ $o-searchpanel-filter-default-color: #D59244;
 
     .o_renderer_with_searchpanel {
         flex: 1 1 100%;
-        overflow: auto; // make the renderer and search panel scroll individually
+        margin-left: 220px;
         max-height: 100%;
     }
     .o_search_panel {
         flex: 0 0 220px;
-        overflow: auto;
-        height: 100%;
+        overflow-x: hidden;
+        position: fixed;
+        width: 220px;
+        height: 537px;
         padding: $o-searchpanel-p-small $o-searchpanel-p-small $o-searchpanel-p*2 $o-searchpanel-p;
         border-right: 1px solid $gray-300;
         background-color: white;
