[IMP] web_editor, website: use new color names
Deprecate alpha, beta, gamma, delta and espilon color names and now use
a new color system: o-color-x, with x from 1 to 5.

This will allow to review the colors of all themes to have nice visuals
for the new color combinations classes, without breaking the current
uses of bg-alpha, alert-delta, etc in current websites of customers.

This will also allow to uniformize all themes under the same conventions
to enforce BS color override:
- o-color-1 used as primary (as before, for alpha)
- o-color-2 used as secondary (as before, for beta)
- darkest of (o-color-2, o-color-3) used as dark (new)
- lightest of (o-color-2, o-color-3) used as light (new)

Before, some themes were not following the 2 first guidelines, they can
now be enforced by suggesting adapted new colors according to the theme
customers used and their customized color:
- o-color-1 set to customer primary if != alpha, or alpha
- o-color-2 set to customer secondary if != beta, or beta

The other colors are determined to try to enforce nice color
combinations classes but this can be reset by the customer if wanted.

Another change is that those colors are defined through color palettes
and not theme color palettes. This will avoid them to generate automatic
bootstrap classes which we don't want (alert, btn) and generate the one
we want by ourself.

Part of https://github.com/odoo/odoo/pull/45856
task-2197038

--- a/addons/web_editor/static/src/scss/web_editor.backend.scss
+++ b/addons/web_editor/static/src/scss/web_editor.backend.scss
@@ -52,6 +52,7 @@
     .colorpicker .o_colorpicker_section > button {
         display: none;
 
+        // FIXME to fix first ?
         &[data-color="alpha"], &[data-color="beta"], &[data-color="gamma"], &[data-color="delta"], &[data-color="epsilon"],
         &[data-color="white"], &[data-color="gray-lighter"], &[data-color="gray-light"], &[data-color="gray"], &[data-color="gray-dark"], &[data-color="gray-darker"], &[data-color="black"],
         &[data-color="primary"], &[data-color="success"], &[data-color="info"], &[data-color="warning"], &[data-color="danger"] {
