--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -287,21 +287,37 @@ $o-we-toolbar-height: 32px;
 // palette once selected to ensure it works.
 
 // Colors
-$o-base-color-palette: () !default;
+$o-base-color-palette: (
+    'o-color-1': transparent,
+    'o-color-2': transparent,
+    'o-color-3': transparent,
+    'o-color-4': transparent,
+    'o-color-5': transparent,
+) !default;
 $o-color-palettes: (
-    (),
+    (
+        'o-color-1': #0D6EFD,
+        'o-color-2': #6C757D,
+        'o-color-3': #F8F9FA,
+        'o-color-4': #FFFFFF,
+        'o-color-5': #343a40,
+
+        // Override for color combination n°3
+        'o-cc3-headings': #F8F9FA,
+        'o-cc3-text': #CCCECF,
+        'o-cc3-link': #06CBFF,
+        'o-cc3-btn-primary': #06CBFF,
+        'o-cc3-btn-secondary': #A5B4C1,
+    ),
 ) !default;
 $o-color-palette-number: 1 !default;
 
 // Theme colors
-$o-base-theme-color-palette: (
-    'alpha': white,
-    'beta': white,
-    'gamma': white,
-    'delta': white,
-    'epsilon': white,
-) !default;
+$o-base-theme-color-palette: () !default;
 $o-theme-color-palettes: (
+    // alpha -> epsilon are old color names kept for compatibility.
+    // They should not be used in the code base anymore and ideally they will
+    // not generate any classes for >= 13.3 databases.
     (
         'alpha': $o-enterprise-primary-color,
         'beta': $o-enterprise-color,
@@ -336,44 +352,44 @@ $o-gray-color-palette-number: 1 !default;
 $o-color-combinations-presets: (
     (
         (
-            'bg': 'delta',
+            'bg': 'o-color-4',
+            'text': null,
+            'headings': 'o-color-1',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-1',
+            'btn-secondary': 'o-color-2',
+        ),
+        (
+            'bg': 'o-color-3',
             'text': null,
             'headings': null,
-            'link': 'alpha',
-            'btn-primary': 'alpha',
-            'btn-secondary': 'beta',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-1',
+            'btn-secondary': 'o-color-2',
         ),
         (
-            'bg': 'gamma',
-            'text': null,
-            'headings': null,
-            'link': 'alpha',
-            'btn-primary': 'alpha',
-            'btn-secondary': 'beta',
+            'bg': 'o-color-2',
+            'text': 'o-color-4',
+            'headings': 'o-color-1',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-1',
+            'btn-secondary': 'o-color-3',
         ),
         (
-            'bg': 'beta',
-            'text': 'delta',
-            'headings': 'delta',
-            'link': 'alpha',
-            'btn-primary': 'alpha',
-            'btn-secondary': 'gamma',
+            'bg': 'o-color-1',
+            'text': 'o-color-4',
+            'headings': 'o-color-5',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-5',
+            'btn-secondary': 'o-color-3',
         ),
         (
-            'bg': 'alpha',
-            'text': 'delta',
-            'headings': 'delta',
-            'link': 'alpha',
-            'btn-primary': 'epsilon',
-            'btn-secondary': 'gamma',
-        ),
-        (
-            'bg': 'epsilon',
-            'text': 'delta',
-            'headings': 'delta',
-            'link': 'alpha',
-            'btn-primary': 'alpha',
-            'btn-secondary': 'gamma',
+            'bg': 'o-color-5',
+            'text': 'o-color-4',
+            'headings': 'o-color-4',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-1',
+            'btn-secondary': 'o-color-3',
         ),
     ),
 ) !default;
