[IMP] web_editor, website: use new color names
Deprecate alpha, beta, gamma, delta and espilon color names and now use
a new color system: o-color-x, with x from 1 to 5.

This will allow to review the colors of all themes to have nice visuals
for the new color combinations classes, without breaking the current
uses of bg-alpha, alert-delta, etc in current websites of customers
(by keeping the old color and classes for compatibility).

This will also allow to uniformize all themes under the same conventions
to enforce BS color override:
- o-color-1 used as primary (as before, for alpha)
- o-color-2 used as secondary (as before, for beta)
- darkest of (o-color-2, o-color-3) used as dark (new!)
- lightest of (o-color-2, o-color-3) used as light (new!)

Before, some themes were not following the 2 first guidelines. The users
using those themes will simply have the possibility to choose o-color-1
and o-color-2 colors accordingly to restore their website without
breaking the new system features.

Another change is that those colors are defined through color palettes
and not theme color palettes. This will avoid them to generate automatic
bootstrap classes which we don't want (alert, btn) and generate the one
we want by ourself.

Part of https://github.com/odoo/odoo/pull/45856
task-2197038

--- a/addons/web_editor/static/src/scss/secondary_variables.scss
+++ b/addons/web_editor/static/src/scss/secondary_variables.scss
@@ -26,19 +26,31 @@ $o-color-combinations: nth($o-color-combinations-presets, $o-color-combinations-
 
 // Theme colors
 $o-theme-color-palette: nth($o-theme-color-palettes, $o-theme-color-palette-number) !default;
-$-main-color: map-get($o-theme-color-palette, 'alpha');
-$-main-color-lightness: lightness($-main-color);
+@if not $o-support-13-0-color-system {
+    $o-theme-color-palette: map-remove($o-theme-color-palette,
+        'alpha',
+        'beta',
+        'gamma',
+        'delta',
+        'epsilon'
+    );
+}
+$-dark: palette-color('o-color-2');
+$-light: palette-color('o-color-3');
+@if lightness($-light) < lightness($-dark) {
+    $-dark: palette-color('o-color-3');
+    $-light: palette-color('o-color-2');
+}
 $o-theme-color-palette: map-merge((
-    // alpha and beta colors are used to override primary and secondary BS4
+    // color 1 and 2 are used to override primary and secondary BS4
     // colors by default, so that theme colors affect the default Odoo layouts
-    'primary': $-main-color,
-    'secondary': map-get($o-theme-color-palette, 'beta'),
+    'primary': palette-color('o-color-1'),
+    'secondary': palette-color('o-color-2'),
 
     // BS light and dark colors are not used for any BS component, just
-    // for color utilities. By default, we set them to a very light and
-    // very dark version of a desaturate version of the main color
-    'light': lighten(desaturate($-main-color, 80%), min(70%, max(0%, 97% - $-main-color-lightness))), // Does not increase over 97% lightness
-    'dark': darken(desaturate($-main-color, 80%), min(70%, max(0%, $-main-color-lightness - 10%))), // Does not lower under 10% lightness
+    // for color utilities.
+    'dark': $-dark,
+    'light': $-light,
 ), o-map-omit($o-theme-color-palette));
 $o-theme-color-palette: map-merge($o-base-theme-color-palette, o-map-omit($o-theme-color-palette));
 @function palette-theme-color($key) {
