--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -2,6 +2,8 @@
 /// This files regroups the variables and mixins which are specific to the editor.
 ///
 
+$o-support-13-0-color-system: false !default;
+
 $o-we-font-family: Roboto, 'Montserrat', 'Segoe UI', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
 
 $o-we-font-size: 13px;
@@ -287,21 +289,37 @@ $o-we-toolbar-height: 32px;
 // palette once selected to ensure it works.
 
 // Colors
-$o-base-color-palette: () !default;
+$o-base-color-palette: (
+    'o-color-1': transparent,
+    'o-color-2': transparent,
+    'o-color-3': transparent,
+    'o-color-4': transparent,
+    'o-color-5': transparent,
+) !default;
 $o-color-palettes: (
-    (),
+    (
+        'o-color-1': $o-enterprise-primary-color,
+        'o-color-2': $o-enterprise-color,
+        'o-color-3': #E7E9EA,
+        'o-color-4': #FFFFFF,
+        'o-color-5': #343a40,
+    ),
+    (
+        'o-color-1': #0D6EFD,
+        'o-color-2': #6C757D,
+        'o-color-3': #E7E9EA,
+        'o-color-4': #FFFFFF,
+        'o-color-5': #343a40,
+    ),
 ) !default;
 $o-color-palette-number: 1 !default;
 
 // Theme colors
-$o-base-theme-color-palette: (
-    'alpha': white,
-    'beta': white,
-    'gamma': white,
-    'delta': white,
-    'epsilon': white,
-) !default;
+$o-base-theme-color-palette: () !default;
 $o-theme-color-palettes: (
+    // alpha -> epsilon are old color names kept for compatibility.
+    // They should not be used in the code base anymore and ideally they will
+    // not generate any classes for >= 13.3 databases.
     (
         'alpha': $o-enterprise-primary-color,
         'beta': $o-enterprise-color,
@@ -336,44 +354,44 @@ $o-gray-color-palette-number: 1 !default;
 $o-color-combinations-presets: (
     (
         (
-            'bg': 'delta',
+            'bg': 'o-color-4',
             'text': null,
-            'headings': null,
-            'link': 'alpha',
-            'btn-primary': 'alpha',
-            'btn-secondary': 'beta',
+            'headings': 'o-color-1',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-1',
+            'btn-secondary': 'o-color-2',
         ),
         (
-            'bg': 'gamma',
+            'bg': 'o-color-3',
             'text': null,
             'headings': null,
-            'link': 'alpha',
-            'btn-primary': 'alpha',
-            'btn-secondary': 'beta',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-1',
+            'btn-secondary': 'o-color-2',
         ),
         (
-            'bg': 'beta',
+            'bg': 'o-color-2',
             'text': null,
-            'headings': null,
-            'link': 'alpha',
-            'btn-primary': 'alpha',
-            'btn-secondary': 'gamma',
+            'headings': 'o-color-3',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-1',
+            'btn-secondary': 'o-color-3',
         ),
         (
-            'bg': 'alpha',
+            'bg': 'o-color-1',
             'text': null,
-            'headings': null,
-            'link': 'alpha',
-            'btn-primary': 'epsilon',
-            'btn-secondary': 'gamma',
+            'headings': 'o-color-5',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-5',
+            'btn-secondary': 'o-color-3',
         ),
         (
-            'bg': 'epsilon',
+            'bg': 'o-color-5',
             'text': null,
             'headings': null,
-            'link': 'alpha',
-            'btn-primary': 'alpha',
-            'btn-secondary': 'gamma',
+            'link': 'o-color-1',
+            'btn-primary': 'o-color-1',
+            'btn-secondary': 'o-color-3',
         ),
     ),
 ) !default;
