--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -25,6 +25,9 @@ $-font-numbers: (
     // customized by themes, the user or anything else (so there is no file to
     // parse to get them). Those will be printed here as CSS variables.
 
+    --support-13-0-color-system: #{$o-support-13-0-color-system};
+    --has-customized-13-0-color-system: #{$o-has-customized-13-0-color-system};
+
     // 1) Handle default values
     --header-font-size: #{$font-size-base};
 
